# ros2_intention_detector

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_intention_detector/lib/ros2_intention_detector/: detector  listener
install/ros2_intention_detector/share/ros2_intention_detector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros2_intention_detector/: .intention_detector_function.py.swp  .intention_subscriber_function.py.swp  intention_detector_function.py  intention_interpreter.py  intention_subscriber_function.py  speech_recogniser.py
ros2_intention_detector/SpeakerArray/: reachyAudioMicArrayFeatures.py
